examples/test/testpolicy7108.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy7108
  namespace: namespace473
spec:
  podSelector:
    matchLabels:
      key25: value9
      key30: value15
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key33: value1
      podSelector:
        matchLabels:
          key32: value37
          key37: value35
